cluster/keel/notification.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-keel-bridge
  namespace: cluster
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: discord-keel-bridge
  template:
    metadata:
      labels:
        app: discord-keel-bridge
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: discord-keel-bridge
          image: reg.ygnv.my.id/docker/gabisonfire/discord-keel-bridge:1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 64Mi
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: discord-keel-bridge
  namespace: cluster
spec:
  selector:
    app: discord-keel-bridge
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
