cluster/keel/keel.yml
---
apiVersion: v1
kind: Service
metadata:
  name: keel
  namespace: cluster
  labels:
    app: keel
spec:
  ports:
    - port: 9300
      targetPort: 9300
      protocol: TCP
      name: keel
  selector:
    app: keel
  sessionAffinity: None
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keel
  namespace: cluster
spec:
  entryPoints:
    - http
    - https
  routes:
    - match: Host(`keel.ygnv.my.id`)
      kind: Rule
      services:
        - name: keel
          port: 9300
  tls: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keel
  namespace: cluster
  labels:
    app: keel
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: keel
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: keel
    spec:
      serviceAccountName: keel
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: "kubernetes.io/arch"
                    operator: In
                    values:
                      - "amd64"
      containers:
        - name: keel
          image: reg.ygnv.my.id/docker/karolisr/keel:0.22.4
          imagePullPolicy: IfNotPresent
          command: ["/bin/keel"]
          ports:
            - containerPort: 9300
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9300
            initialDelaySeconds: 30
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /data
              name: keel-data
      volumes:
        - name: keel-data
          hostPath:
            path: /mnt/cephfs/docker/cluster/keel
            type: Directory
